--- a/Stats.htm
+++ b/Stats.htm
@@ -4,7 +4,7 @@
     <title>About Me</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <style>
@@ -70,9 +70,19 @@
     <a href="./index.htm"><h3 style = "color:black; font-weight:lighter">Back</h3></a>
     <div class="fade-inT">
     <div class="center">
-        <h1>More about me.</h1>
+        <h1>More stats.</h1>
         <br>
         <br>
+        <img src="https://wakatime.com/share/@Siddhart/c637ba1a-1033-4cbc-acdd-20d3f5ae8cd8.png" style="max-height:90%;max-height:90%;width: 100%; height:auto; border-radius: 10px;"/>
+        <br>
+        <br>
+        <br>
+        <img src="https://wakatime.com/share/@Siddhart/a21a6734-adc1-49a4-958b-873d24de9501.png" style="max-height:90%;max-height:90%;width: 100%; height:auto; border-radius: 10px;">
+        <br>
+        <br>
+        <br>
+        <br>
+             
     </div>
     </div>
 </div>
@@ -80,28 +90,7 @@
 <br>
 <br>
 <div class="all">
-    <div class="fade-inT">
-    <div class="card">
-        <h3 style="padding-left: 10px;">Description:</h3>
-        <div class="desc" style="text-align:left; padding-left: 10px;">
-            My name is Siddhart, I am currently 15 years old and I live in the Netherlands.
-            I started coding when i was 13, I started with visual coding.
-            I didn't like that so I jumped to Unity 3D and c#.<br>
-            In the beginning it was really hard and I lost interest really quick.<br><br>
-            A few months later game development got interesting for me again. I gave it a second chance. I found out about Itch.io I found someone who was hosting game jams and I joined their Discord server and made some friends.<br>
-            Someone that I had met was also from the Netherlands and we continued to make games together. Later we started a little game studio called Arctic Studio.<br>
-            Working together on games was a really great and fun experience. I learned a lot about coding and I improved my coding skills.<br><br>
-            Nowdays I still try to code every day and improve my coding skills. I worked with C#, Javascript, Python and a few more languages. I am now trying to get into Cyber Security, I also want to do something with that later.<br>
-            This website is the first site I have ever made :D<br>
-            <br>
-            <b>Skills: C#, Javascript, Python, HTML, CSS</b>
-            <br>
-            <br>
-            Click <a style="color:black" href="./Stats.htm" target="_blank">here</a> to see my coding activities!
-        </div>
-        <br>
-    </div>
-    </div>
+
 </div>
 
 <br>
