updated to monday 12 CEST

--- a/DailyArtJams.htm
+++ b/DailyArtJams.htm
@@ -69,7 +69,7 @@
     <div class="fade-inT">
     <div class="center">
         <h1>Daily Art Jams</h1>
-        <h2 style="font-weight: lighter;">The Daily Art Jams bot was a fun and cool project to work on. It was the second bot i have made.</h2>
+        <h2 style="font-weight: lighter;">The Weekly Art Jams bot was a fun and cool project to work on. It was the second bot i have made.</h2>
         <br>
         <br>
     </div>
@@ -92,7 +92,7 @@
   <p>TB</p>
   <br>
   <h3>Description:</h3>
-  <p>This bot will send a random theme every 24 hours.</p>
+  <p>This bot will send a random theme every Monday at 12:00 CEST.</p>
   <p>It will send a theme out of a list with more than <b>100+ themes.</b></p>
   <br>
   <p>I made it for a friend with a Art channel on Discord. I published the bot and can be used by everyone.</p>
