--- a/index.htm
+++ b/index.htm
@@ -93,8 +93,8 @@
     <div class="card">
         <img src="./images/DAB.png" alt="Avatar" style="width:25%; border-radius: 10px;">
         <div class="container">
-          <b><h4>Daily Art Jams (Discord Bot)</h4></b>
-          <p>The Daily Art Jams bot will host daily art jams in your Discord server. It will display a new theme every 24 hours</p> 
+          <b><h4>Weekly Art Jams Bot (Discord Bot)</h4></b>
+          <p>The Weekly Art Jams Bot will host weekly art jams in your Discord server. It will display a new theme every Monday at 12:00 CEST</p> 
           <a href="./DailyArtJams.htm"><p style = "color:black">More info</p></a>
         </div>
     </div>
