--- a/DailyArtJams.htm
+++ b/DailyArtJams.htm
@@ -68,7 +68,7 @@
 
     <div class="fade-inT">
     <div class="center">
-        <h1>Daily Art Jams</h1>
+        <h1>Weekly Art Jams</h1>
         <h2 style="font-weight: lighter;">The Weekly Art Jams bot was a fun and cool project to work on. It was the second bot i have made.</h2>
         <br>
         <br>
