--- a/download.htm
+++ b/download.htm
@@ -1,13 +1,23 @@
 <a href="" download></a>
 <button><a href="./images/SB.png" download="StarBotIMG">TEST</a></button>
 
-<script>
-    $(function() {
-        $('a[data-auto-download]').each(function(){
-          var $this = $(this);
-          setTimeout(function() {
-            window.location = $this.attr('./images/SB.png');
-          }, 2000);
-        });
-      });
-</script>
+<html>
+    <head>
+        <title>Test</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <script type="text/javascript">
+          $(function codeAddress() {
+            $('a[data-auto-download]').each(function(){
+              var $this = $(this);
+              setTimeout(function() {
+                window.location = $this.attr('./images/SB.png');
+              }, 2000);
+            });
+          });
+        window.onload = codeAddress;
+        </script>
+    </head>
+    <body>
+    
+    </body>
+</html>
