--- a/download.htm
+++ b/download.htm
@@ -5,6 +5,7 @@
         <script type="text/javascript">
           function codeAddress() {
             console.log("works")
+            window.location = document.getElementById('./images/SB.png').href;
           };
         window.onload = codeAddress;
         </script>
