weekly jam update

--- a/DailyArtJams.htm
+++ b/DailyArtJams.htm
@@ -78,7 +78,7 @@
       <img src="./images/DAB.png" style="width:25%; border-radius: 10px;">
       <br>
       <br>
-      <img src="https://top.gg/api/widget/servers/666040009941581839.svg?" alt="StarBot">
+      <img src="https://top.gg/api/widget/servers/685912884437581833.svg?" alt="Weekly Art Jams">
       <a target="_blank" href="https://discordapp.com/api/oauth2/authorize?client_id=685912884437581833&permissions=8&scope=bot"><h2 style = "font-family:courier,arial,helvetica; color:black">Invite!</h2></a>
       </div>
     <br>
