--- a/AboutMe.htm
+++ b/AboutMe.htm
@@ -97,7 +97,7 @@
             <b>Skills: C#, Javascript, Python, HTML, CSS</b>
             <br>
             <br>
-            Click <a style="color:black" href="./Stats.htm" target="_blank">here</a> to see my coding activities!
+            Click <a style="color:black" href="https://wakatime.com/@Siddhart" target="_blank">here</a> to see my coding activities!
         </div>
         <br>
     </div>
