added Rocket and Hermes

--- a/AboutMe.htm
+++ b/AboutMe.htm
@@ -81,7 +81,7 @@
 <br>
 <div class="all">
     <div class="fade-inT">
-    <div class="card">
+    <!--<div class="card">-->
         <h3 style="padding-left: 10px;">Description:</h3>
         <div class="desc" style="text-align:left; padding-left: 10px;">
             My name is Siddhart, I am currently 15 years old and I live in the Netherlands.
@@ -100,7 +100,7 @@
             Click <a style="color:black" href="https://wakatime.com/@Siddhart" target="_blank">here</a> to see my coding activities!
         </div>
         <br>
-    </div>
+    <!--</div>-->
     </div>
 </div>
 
