--- a/HistoryBot.htm
+++ b/HistoryBot.htm
@@ -67,18 +67,18 @@
 
   <div class="fade-inT">
   <div class="center">
-      <b><h1>Star Bot</h1></b>
-      <h2 style="font-weight: lighter">Star Bot was a little project that i had. It was the first Discord bot that i made.</h2>
+      <b><h1>History bot</h1></b>
+      <h2 style="font-weight: lighter">I made this bot for someone with a history channel, I later published the bot to be used by everyone.</h2>
       <br>
       <br>
   </div>
 
   <div class="center">
-    <img src="./images/SB.png" style="width:25%; border-radius: 10px;" >
+    <img src="./images/HM.png" style="width:25%; border-radius: 10px;" >
     <br>
     <br>
     <img src="https://top.gg/api/widget/servers/666040009941581839.svg?usernamecolor=FFFFFF&topcolor=000000&__cf_chl_captcha_tk__=1ae5fee908ddaf100e6ce3ea9fc64b2202ad1ed5-1584713054-0-AUwFJowT7y34uVdKLq3J8ECvaC_1xSWD1ds3LlefVRL0CxPUDXLj7N8E0eXCL_SADhUZ5UpD-DnvLUArqR0vVzPrAi1BOzvJLXEygMoj6mTq4ChXAz2nr5FQ2PvnKIGD_JaKVjpXZhD9TRD0d09N2LZCjCUYgk9lEj6Kg22bl8GqgiUKsbVMLMv021pZdix9h2zIHXPqvuj6KO8wmsgua0dJLcznKRAu_Ov1PtwN_STkW2N0gOJh3b8tQkKHWrSQKIwUm_MeyEmzI_vkQVr18xJeYkTqnmvD7aFLauJVgdbFXafi89fBboe5eYVAdGnaPnEIlfQh4v58qjszQPhMxwW2HCPk3xfJsyjgGSxskbSzPt25bxmrDjSdYQoGMiyLIJq_1JVhm6ntjnAol8iN_PjR02GBa4KprK-P_WpNcHjhtviWC4yqUFAIPXJNVZm8RIPqzBuPe7xe-Wiypt2TgtZAunP8JXIRyEIZTdUdF63koDwHCHziw7KgXsTNSGscGw" alt="StarBot">
-    <a target="_blank" href="https://discordapp.com/api/oauth2/authorize?client_id=666040009941581839&permissions=8&redirect_uri=https%3A%2F%2Fdiscordapp.com%2Fapi%2Foauth2%2Fauthorize%3Fclient_id%3D666040009941581839%26permissions%3D8%26scope%3Dbot&scope=bot"><h2 style = "color:black">Invite!</h2></a>  
+    <a target="_blank" href="https://discordapp.com/api/oauth2/authorize?client_id=697812974563360768&permissions=8&scope=bot"><h2 style = "color:black">Invite!</h2></a>  
     </div>
     <br>
     <br>
@@ -88,35 +88,27 @@
 <div class="all">
   <div class="fade-inC">
   <h3>Prefix:</h3>
-  <p>SB</p>
+  <p>HM</p>
   <br>
   <h3>Description:</h3>
-  <p><b>User1:</b> Does someone know how i can invite my friend to this server?</p>
-  <p><b>User2:</b> Yeh you just click on the server name and click invite, Send this link to your friend.</p>
-  <p><b>User1:</b> Ah thanks man!</p>
-  <p><b>User1:</b> SB star @User2</p>
+  <p>This bot will send a message everyday with a random event that happened in the past on the same day.</p>
 
-  <p>This bot gives a user a star for appreciation.</p>
   <br>
-  <h4>There are 6 roles:</h4>
-  <b><p>- 5 ⭐️'s</p></b>
-  <b><p>- 25 ⭐️'s</p></b>
-  <b><p>- 50 ⭐️'s</p></b>
-  <b><p>- 75 ⭐️'s</p></b>
-  <b><p>- 250 ⭐️'s</p></b>
-  <b><p>- ⭐️ Master</p></b>
-  <br>
-  <h4>Features:</h4>
-  <p>- Adds roles automatically.</p>
-  <p>- <b>SB help</b> to get all the commands.</p>
-  <p>- <b>SB star @USER</b> to give someone a star.</p>
-  <p>- <b>SB check @USER</b> to check the amount of stars a user has.</p> 
+  <h4>Commands:</h4>
+  <p>- <b>HB get</b> to get a random event that happend in the past on the same day.</p>
+  <p>- <b>HB setup</b> type this command in the channel where you want the daily messages. (only for users with admin permissions).</p>
+  <p>- <b>HB stop</b> type this command to stop the daily messages . (only for users with admin permissions).</p>
+  <p>- <b>HB help</b> type this command to get the all the commands.</p> 
   </div>
 </div>
 
+<br>
+<br>
+
+
 <script>
   var i;
-  for (i = 0; i < 3; i++) { 
+  for (i = 0; i < 5; i++) { 
       document.write("<br>");
   }
 </script>
