--- a/index.htm
+++ b/index.htm
@@ -99,6 +99,33 @@
         </div>
     </div>
   </div>
+
+
+<br>
+<br>
+
+<div class="card">
+    <img src="./images/Rocket.png" alt="Avatar" style="width:25%; border-radius: 10px;">
+    <div class="container">
+      <b><h4>Rocket Launch Tracker</h4></b>
+      <p>This bot will notify the users in your server when a new rocket launch is announced.</p> 
+      <a href="./RocketLaunchTracker.htm"><p style = "color:black">More info</p></a>
+    </div>
+</div>
+
+<br>
+<br>
+
+<div class="card">
+  <img src="./images/HM.png" alt="Avatar" style="width:25%; border-radius: 10px;">
+  <div class="container">
+    <b><h4>History Bot</h4></b>
+    <p>This bot will send a random event that happened in the past on the same day</p> 
+    <a href="./HistoryBot.htm"><p style = "color:black">More info</p></a>
+  </div>
+</div>
+</div>
+</div>
 </div>
 
 <script>
