--- a/RocketLaunchTracker.htm
+++ b/RocketLaunchTracker.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Star Bot</title>
+    <title>Rocket Launch Tracker</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -68,7 +68,7 @@
   <div class="fade-inT">
   <div class="center">
       <b><h1>Rocket Launch Tracker</h1></b>
-      <h2 style="font-weight: lighter">Star Bot is the third bot i had made. I made this because i am really interested in rockets.</h2>
+      <h2 style="font-weight: lighter">Rocket Launch Tracker is the third bot i had made. I made this because i am really interested in rockets.</h2>
       <br>
       <br>
   </div>
