--- a/index.htm
+++ b/index.htm
@@ -81,7 +81,7 @@
     <div class="card">
         <img src="./images/SB.png" alt="Avatar" style="width:25%; border-radius: 10px;">
         <div class="container">
-          <b><h4>Star Bot (Discord Bot)</h4></b>
+          <b><h4>Star Bot</h4></b>
           <p>Star Bot is a bot that users can use to give people stars for appreciation</p>
           <a href="./StarBot.htm"><p style = "color:black">More info</p></a>
         </div>
@@ -90,10 +90,24 @@
     <br>
     <br>
 
+    <div class="all">
+      <div class="fade-inC">
+        <div class="card">
+            <img src="./images/FB.png" alt="Avatar" style="width:25%; border-radius: 10px;">
+            <div class="container">
+              <b><h4>Free Games Bot</h4></b>
+              <p>The Free Games Bot will notify your server when there is a new free game</p>
+              <a href="./FreeGames.htm"><p style = "color:black">More info</p></a>
+            </div>
+        </div>
+    
+        <br>
+        <br>
+
     <div class="card">
         <img src="./images/DAB.png" alt="Avatar" style="width:25%; border-radius: 10px;">
         <div class="container">
-          <b><h4>Weekly Art Jams Bot (Discord Bot)</h4></b>
+          <b><h4>Weekly Art Jams Bot</h4></b>
           <p>The Weekly Art Jams Bot will host weekly art jams in your Discord server. It will display a new theme every Monday at 12:00 CEST</p> 
           <a href="./DailyArtJams.htm"><p style = "color:black">More info</p></a>
         </div>
